fix: fix donation footer nav z-index

--- a/online-zoo/styles/donate.css
+++ b/online-zoo/styles/donate.css
@@ -155,6 +155,7 @@
 
 	.nav_don--footer {
 		position: relative;
+		z-index: 5;
 		right: -6px;
 	}
 }
